tests/lime/fail/tokens/label_rest/byte_58.wsa
jmp .l: .l:: push 58
